--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "bugs": {
     "url": "https://github.com/Tzikas/IronPlate/issues"
   },
-  
-  "homepage": "https://github.com/Tzikas/IronPlate#readme"
+  "homepage": "https://github.com/Tzikas/IronPlate#readme",
+  "dependencies": {
+    "react": "^17.0.1"
+  }
 }
