--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.21",
+    "react-modal": "^3.12.1",
     "react-notifications": "^1.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1"
